--- a/Ping.html
+++ b/Ping.html
@@ -28,9 +28,9 @@
         <img class="ill" src="../images/illustration-dashboard.png" >
         
         <footer>
-            <img class="social f" src="../images/facebook-before.svg">
-            <img class="social t" src="../images/twitter-before.svg">
-            <img class="social i" src="../images/instagram-before.svg">
+            <img class="social f" src="../images/facebook-before.svg" alt="social">
+            <img class="social t" src="../images/twitter-before.svg" alt="social">
+            <img class="social i" src="../images/instagram-before.svg" alt="social">
         </footer>
         <p class="copy">&copy; Copyright Ping, COSMOS</p>
         
